# market_basket_app

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  test_all_modules.py
.github/workflows/: ci.yml
data/: sample_transactions.csv
src/: __init__.py  config.py
src/algorithms/: __init__.py  fpgrowth.py  frequent_itemsets.py
src/analytics/: __init__.py  addon.py  association_stats.py  basket_metrics.py  cdt_attributes.py  cdt_behavioral.py  cdt_clustering.py  cdt_similarity.py  cdt_tree_builder.py  cohort.py  copurchase.py  demand_transference.py  product_performance.py  promotional.py  segmentation.py  segmentation_enhanced.py  switching.py
src/data/: __init__.py  generator.py  loader.py
src/models/: __init__.py  decision_tree.py  enhanced_tree.py
src/rules/: __init__.py  generator.py
src/ui/: __init__.py  addon_tab.py  cdt_tab.py  cohort_tab.py  copurchase_tab.py  export.py  product_performance_tab.py  promotional_tab.py  rules_tab.py  segmentation_tab.py  sidebar.py  switching_tab.py  tabs.py  tree_tab.py
src/utils/: __init__.py  session.py
src/viz/: __init__.py  cdt_viz.py  decision_tree.py  heatmap.py  network.py
tests/: conftest.py  test_fpgrowth.py  test_rules.py
